# ChangeLog file for monetdb-java
# This file is updated with Maddlog

* Thu Nov  3 2022 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected returned SQL TypeName values for the MonetDB interval types:
  'day_interval', 'month_interval' and 'sec_interval'.  Those MonetDB
  type names can not be used in CREATE TABLE statements. Instead
  one has to use SQL type names: 'interval day', 'interval month' or
  'interval second'. The JDBC driver now returns those SQL type names.
  This applies to methods: DatabaseMetaData.getTypeInfo() for the output
  column TYPE_NAME (the output column LOCAL_TYPE_NAME now returns
  the original type name), ResultSetMetaData.getColumnTypeName() and
  ParameterMetaData.getParameterTypeName().

* Thu Oct 27 2022 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected PreparedStatement methods getMetaData().getColumnDisplaySize(),
  getMetaData().getPrecision() and getParameterMetaData().getPrecision().

* Thu Oct 20 2022 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Improved implementation of method ResultSetMetaData.getPrecision(). It
  now returns more accurate values for columns of type DECIMAL, NUMERIC,
  CHAR, VARCHAR, CLOB, JSON, URL and BLOB.
- Improved implementation of method ResultSetMetaData.getScale(). It now
  returns more accurate values for columns of type DECIMAL and NUMERIC.

* Thu Sep 29 2022 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Removed creation and distribution of monetdb-mcl-1.##.jre8.jar file.
  Programmers who used this jar file should use monetdb-jdbc-3.#.jre8.jar file.

* Fri Sep 09 2022 Joeri van Ruth <joeri.van.ruth@monetdbsolutions.com>
- Add autocommit=true/false option to the JDBC URL. The default remains 'true'.

* Wed Aug 24 2022 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Improved DatabaseMetaData.getBestRowIdentifier(). When there are multiple